--- a/Views/KhachHang/Create.cshtml
+++ b/Views/KhachHang/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="KhachHangID" class="control-label"></label>
-                <input asp-for="KhachHangID" class="form-control" />
-                <span asp-validation-for="KhachHangID" class="text-danger"></span>
+                <label asp-for="CodeKhachHang" class="control-label"></label>
+                <input asp-for="CodeKhachHang" class="form-control" />
+                <span asp-validation-for="CodeKhachHang" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
