--- a/Views/KhachHang/Delete.cshtml
+++ b/Views/KhachHang/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KhachHangID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.KhachHangID)
-        </dd>
-             <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.KhachHangName)
         </dt>
         <dd class = "col-sm-10">
@@ -38,7 +32,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="KhachHangID" />
+        <input type="hidden" asp-for="CodeKhachHang" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
