--- a/Views/KhachHang/Edit.cshtml
+++ b/Views/KhachHang/Edit.cshtml
@@ -12,12 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="KhachHangID" />
-             <div class="form-group">
-                <label asp-for="KhachHangID" class="control-label"></label>
-                <input asp-for="KhachHangID" class="form-control" />
-                <span asp-validation-for="KhachHangID" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="CodeKhachHang" />
             <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
                 <input asp-for="KhachHangName" class="form-control" />
@@ -32,6 +27,9 @@
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
