--- a/Views/Language/Details.cshtml
+++ b/Views/Language/Details.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.Sach
+@model Super_Book_Store.Models.Language
 
 @{
     ViewData["Title"] = "Details";
@@ -7,18 +7,18 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Sach</h4>
+    <h4>Language</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SachName)
+            @Html.DisplayNameFor(model => model.LanguageName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SachName)
+            @Html.DisplayFor(model => model.LanguageName)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.SachID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.LanguageID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
