--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,6 +34,12 @@
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="NhaXuatBan" asp-action="Index">Nhà Xuất Bản</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookType" asp-action="Index">Loại Sách</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NhanVien" asp-action="Index">Nhân Viên</a>
+                        </li>
                     </ul>
                 </div>
             </div>
