--- a/Super-Book-Store/Views/Kho/Edit.cshtml
+++ b/Super-Book-Store/Views/Kho/Edit.cshtml
@@ -12,7 +12,17 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="BookName" />
+            <input type="hidden" asp-for="BookID" />
+            <div class="form-group">
+                <label asp-for="BookID" class="control-label"></label>
+                <input asp-for="BookID" class="form-control" />
+                <span asp-validation-for="BookID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BookName" class="control-label"></label>
+                <input asp-for="BookName" class="form-control" />
+                <span asp-validation-for="BookName" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="NumberbBook" class="control-label"></label>
                 <input asp-for="NumberbBook" class="form-control" />
