--- a/Super-Book-Store/Views/Kho/Create.cshtml
+++ b/Super-Book-Store/Views/Kho/Create.cshtml
@@ -13,9 +13,13 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="BookID" class="control-label"></label>
+                <input asp-for="BookID" class="form-control" />
+                <span asp-validation-for="BookID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="BookName" class="control-label"></label>
-                @* <input asp-for="BookName" class="form-control" value="@ViewBag.BookName" readonly/> *@
-                <input asp-for="BookName" class="form-control"/>
+                <input asp-for="BookName" class="form-control" />
                 <span asp-validation-for="BookName" class="text-danger"></span>
             </div>
             <div class="form-group">
