--- a/Super-Book-Store/Views/Language/Index.cshtml
+++ b/Super-Book-Store/Views/Language/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.LanguageID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.LanguageName)
             </th>
             <th></th>
@@ -21,6 +24,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.LanguageID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LanguageName)
             </td>
