--- a/Super-Book-Store/Views/Shared/_Layout.cshtml
+++ b/Super-Book-Store/Views/Shared/_Layout.cshtml
@@ -25,6 +25,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookType" asp-action="Index">Loại Sách</a>
+                            <a class="nav-link text-dark items" asp-area="" asp-controller="BookType" asp-action="Create">Thêm Loại Sách</a>
+
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kho" asp-action="Index">Kho</a>
+                            <a class="nav-link text-dark items" asp-area="" asp-controller="Kho" asp-action="Upload">UpLoad</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Language" asp-action="Index">Ngôn Ngữ</a>
+                            <a class="nav-link text-dark items" asp-area="" asp-controller="Language" asp-action="Create">Thêm ngôn ngữ</a>
+                        </li>
                     </ul>
                 </div>
             </div>
