--- a/Views/BookType/Edit.cshtml
+++ b/Views/BookType/Edit.cshtml
@@ -14,19 +14,19 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BookID" />
             <div class="form-group">
-                <label asp-for="BookName" class="control-label"></label>
-                <input asp-for="BookName" class="form-control" />
-                <span asp-validation-for="BookName" class="text-danger"></span>
+                <label asp-for="BookNameID" class="control-label"></label>
+                <select asp-for="BookNameID" class="form-control" asp-items="ViewBag.BookNameID"></select>
+                <span asp-validation-for="BookNameID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BookTypeNew" class="control-label"></label>
+                <input asp-for="BookTypeNew" class="form-control" />
+                <span asp-validation-for="BookTypeNew" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="AuthorName" class="control-label"></label>
                 <input asp-for="AuthorName" class="form-control" />
                 <span asp-validation-for="AuthorName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="BookTypeName" class="control-label"></label>
-                <input asp-for="BookTypeName" class="form-control" />
-                <span asp-validation-for="BookTypeName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LanguageID" class="control-label"></label>
