--- a/Views/BookType/Index.cshtml
+++ b/Views/BookType/Index.cshtml
@@ -13,13 +13,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.BookName)
+                @Html.DisplayNameFor(model => model.Kho)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BookTypeNew)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.AuthorName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BookTypeName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Language)
@@ -31,13 +31,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.BookName)
+                @Html.DisplayFor(modelItem => item.Kho.BookID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.BookTypeNew)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.AuthorName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BookTypeName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Language.LanguageID)
