--- a/Views/HoaDon/Create.cshtml
+++ b/Views/HoaDon/Create.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.NhanVien
+@model Super_Book_Store.Models.HoaDon
 
 @{
     ViewData["Title"] = "Create";
@@ -6,31 +6,28 @@
 
 <h1>Create</h1>
 
-<h4>NhanVien</h4>
+<h4>HoaDon</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="NhanVienID" class="control-label"></label>
-                <input asp-for="NhanVienID" class="form-control" />
-                <span asp-validation-for="NhanVienID" class="text-danger"></span>
+                <label asp-for="HoaDonID" class="control-label"></label>
+                <input asp-for="HoaDonID" class="form-control" />
+                <span asp-validation-for="HoaDonID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="NhanVienName" class="control-label"></label>
-                <input asp-for="NhanVienName" class="form-control" />
-                <span asp-validation-for="NhanVienName" class="text-danger"></span>
+                <label asp-for="KhachHangName" class="control-label"></label>
+                <select asp-for="KhachHangName" class ="form-control" asp-items="ViewBag.KhachHangName"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Sex" class="control-label"></label>
-                <input asp-for="Sex" class="form-control" />
-                <span asp-validation-for="Sex" class="text-danger"></span>
+                <label asp-for="BookNameID" class="control-label"></label>
+                <select asp-for="BookNameID" class ="form-control" asp-items="ViewBag.BookNameID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                <label asp-for="LanguageID" class="control-label"></label>
+                <select asp-for="LanguageID" class ="form-control" asp-items="ViewBag.LanguageID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
