--- a/Views/HoaDon/Delete.cshtml
+++ b/Views/HoaDon/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.NhanVien
+@model Super_Book_Store.Models.HoaDon
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,32 +8,26 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>NhanVien</h4>
+    <h4>HoaDon</h4>
     <hr />
     <dl class="row">
-         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NhanVienID)
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.KhachHang)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NhanVienID)
+            @Html.DisplayFor(model => model.KhachHang.KhachHangID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NhanVienName)
+            @Html.DisplayNameFor(model => model.Kho)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NhanVienName)
+            @Html.DisplayFor(model => model.Kho.BookID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sex)
+            @Html.DisplayNameFor(model => model.Language)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sex)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
+            @Html.DisplayFor(model => model.Language.LanguageID)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
@@ -44,7 +38,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="NhanVienID" />
+        <input type="hidden" asp-for="HoaDonID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
