--- a/Views/HoaDon/Details.cshtml
+++ b/Views/HoaDon/Details.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.KhachHang
+@model Super_Book_Store.Models.HoaDon
 
 @{
     ViewData["Title"] = "Details";
@@ -7,20 +7,14 @@
 <h1>Details</h1>
 
 <div>
-    <h4>KhachHang</h4>
+    <h4>HoaDon</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.KhachHangName)
+            @Html.DisplayNameFor(model => model.KhachHang)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.KhachHangName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Sex)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Sex)
+            @Html.DisplayFor(model => model.KhachHang.KhachHangID)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Kho)
@@ -35,12 +29,6 @@
             @Html.DisplayFor(model => model.Language.LanguageID)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
         </dt>
         <dd class = "col-sm-10">
@@ -49,6 +37,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.KhachHangID">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.HoaDonID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
