--- a/Views/HoaDon/Edit.cshtml
+++ b/Views/HoaDon/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.KhachHang
+@model Super_Book_Store.Models.HoaDon
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,22 +6,17 @@
 
 <h1>Edit</h1>
 
-<h4>KhachHang</h4>
+<h4>HoaDon</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="KhachHangID" />
+            <input type="hidden" asp-for="HoaDonID" />
             <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
-                <input asp-for="KhachHangName" class="form-control" />
+                <select asp-for="KhachHangName" class="form-control" asp-items="ViewBag.KhachHangName"></select>
                 <span asp-validation-for="KhachHangName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Sex" class="control-label"></label>
-                <input asp-for="Sex" class="form-control" />
-                <span asp-validation-for="Sex" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BookNameID" class="control-label"></label>
@@ -32,11 +27,6 @@
                 <label asp-for="LanguageID" class="control-label"></label>
                 <select asp-for="LanguageID" class="form-control" asp-items="ViewBag.LanguageID"></select>
                 <span asp-validation-for="LanguageID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber" class="control-label"></label>
-                <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
