--- a/Views/KhachHang/Create.cshtml
+++ b/Views/KhachHang/Create.cshtml
@@ -13,14 +13,27 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CodeKhachHang" class="control-label"></label>
-                <input asp-for="CodeKhachHang" class="form-control" />
-                <span asp-validation-for="CodeKhachHang" class="text-danger"></span>
+                <label asp-for="KhachHangID" class="control-label"></label>
+                <input asp-for="KhachHangID" class="form-control" />
+                <span asp-validation-for="KhachHangID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
                 <input asp-for="KhachHangName" class="form-control" />
                 <span asp-validation-for="KhachHangName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Sex" class="control-label"></label>
+                <input asp-for="Sex" class="form-control" />
+                <span asp-validation-for="Sex" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BookNameID" class="control-label"></label>
+                <select asp-for="BookNameID" class ="form-control" asp-items="ViewBag.BookNameID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="LanguageID" class="control-label"></label>
+                <select asp-for="LanguageID" class ="form-control" asp-items="ViewBag.LanguageID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber" class="control-label"></label>
