--- a/Views/Kho/Details.cshtml
+++ b/Views/Kho/Details.cshtml
@@ -17,32 +17,32 @@
             @Html.DisplayFor(model => model.BookName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SoLuong)
+            @Html.DisplayNameFor(model => model.NumberbBook)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SoLuong)
+            @Html.DisplayFor(model => model.NumberbBook)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TonKho)
+            @Html.DisplayNameFor(model => model.BookStoreExists)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TonKho)
+            @Html.DisplayFor(model => model.BookStoreExists)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NhapKho)
+            @Html.DisplayNameFor(model => model.InventoryBook)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NhapKho)
+            @Html.DisplayFor(model => model.InventoryBook)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.XuatKho)
+            @Html.DisplayNameFor(model => model.ExportBook)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.XuatKho)
+            @Html.DisplayFor(model => model.ExportBook)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.BookName">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.BookID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
