--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Kho" asp-action="Index">Kho</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="NhaXuatBan" asp-action="Index">Nhà Xuất Bản</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HoaDon" asp-action="Index">Hóa Đơn</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BookType" asp-action="Index">Loại Sách</a>
@@ -40,6 +40,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="NhanVien" asp-action="Index">Nhân Viên</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
