--- a/Super-Book-Store/Views/Kho/Details.cshtml
+++ b/Super-Book-Store/Views/Kho/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BookName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BookName)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumberbBook)
         </dt>
         <dd class = "col-sm-10">
@@ -37,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.BookName">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.BookID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
