--- a/Super-Book-Store/Views/Shared/_Layout.cshtml
+++ b/Super-Book-Store/Views/Shared/_Layout.cshtml
@@ -25,6 +25,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="KhachHang" asp-action="Index">Khách Hàng</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Kho" asp-action="Index">Kho</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="HoaDon" asp-action="Index">Hóa Đơn</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BookType" asp-action="Index">Loại Sách</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NhanVien" asp-action="Index">Nhân Viên</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
