--- a/Super-Book-Store/Views/BookType/Index.cshtml
+++ b/Super-Book-Store/Views/BookType/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.AuthorName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Language.LanguageName)
+                @Html.DisplayFor(modelItem => item.Language.LanguageID)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.BookID">Edit</a> |
