--- a/Super-Book-Store/Views/BookType/Create.cshtml
+++ b/Super-Book-Store/Views/BookType/Create.cshtml
@@ -13,11 +13,16 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="BookNameID" class="control-label"></label>
+                <label asp-for="BookID" class="control-label"></label>
+                <input asp-for="BookID" class="form-control" value="@ViewBag.BookID" readonly/>
+                <span asp-validation-for="BookID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BookNameID" class="control-label">BookType</label>
                 <select asp-for="BookNameID" class ="form-control" asp-items="ViewBag.BookNameID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="BookTypeNew" class="control-label"></label>
+                <label asp-for="BookTypeNew" class="control-label">BookName</label>
                 <input asp-for="BookTypeNew" class="form-control" />
                 <span asp-validation-for="BookTypeNew" class="text-danger"></span>
             </div>
