--- a/Super-Book-Store/Views/BookType/Index.cshtml
+++ b/Super-Book-Store/Views/BookType/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <thead>
         <tr>
+             <th>
+                @Html.DisplayNameFor(model => model.BookID)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Kho)
             </th>
