--- a/Super-Book-Store/Views/Shared/_Layout.cshtml
+++ b/Super-Book-Store/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -30,6 +30,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Kho" asp-action="Index">Kho</a>
+                            <a class="nav-link text-dark items" asp-area="" asp-controller="Kho" asp-action="Upload">UpLoad</a>
                         </li>
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="HoaDon" asp-action="Index">Hóa Đơn</a>
@@ -39,6 +40,11 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="NhanVien" asp-action="Index">Nhân Viên</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Language" asp-action="Index">Ngôn Ngữ </a>
+                            <a class="nav-link text-dark items" asp-area="" asp-controller="Language" asp-action="Create">Thêm Ngôn Ngữ </a>
+
                         </li>
                         
                     </ul>
