--- a/Super-Book-Store/Views/HoaDon/Create.cshtml
+++ b/Super-Book-Store/Views/HoaDon/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="HoaDonID" class="control-label"></label>
-                <input asp-for="HoaDonID" class="form-control" />
+                <input asp-for="HoaDonID" class="form-control" value="@ViewBag.HoaDonID" readonly/>
                 <span asp-validation-for="HoaDonID" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,6 +28,10 @@
             <div class="form-group">
                 <label asp-for="LanguageID" class="control-label"></label>
                 <select asp-for="LanguageID" class ="form-control" asp-items="ViewBag.LanguageID"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="NhanVienName" class="control-label"></label>
+                <select asp-for="NhanVienName" class ="form-control" asp-items="ViewBag.NhanVienName"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
