--- a/Super-Book-Store/Views/HoaDon/Delete.cshtml
+++ b/Super-Book-Store/Views/HoaDon/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.HoaDonID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.HoaDonID)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.KhachHang)
         </dt>
         <dd class = "col-sm-10">
@@ -28,6 +34,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Language.LanguageID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NhanVien)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NhanVien.NhanVienID)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
