--- a/Super-Book-Store/Views/HoaDon/Details.cshtml
+++ b/Super-Book-Store/Views/HoaDon/Details.cshtml
@@ -9,7 +9,12 @@
 <div>
     <h4>HoaDon</h4>
     <hr />
-    <dl class="row">
+    <dl class="row"><dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.HoaDonID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.HoaDonID)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.KhachHang)
         </dt>
@@ -27,6 +32,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Language.LanguageID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.NhanVien)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.NhanVien.NhanVienID)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
