--- a/Super-Book-Store/Views/HoaDon/Edit.cshtml
+++ b/Super-Book-Store/Views/HoaDon/Edit.cshtml
@@ -29,6 +29,11 @@
                 <span asp-validation-for="LanguageID" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="NhanVienName" class="control-label"></label>
+                <select asp-for="NhanVienName" class="form-control" asp-items="ViewBag.NhanVienName"></select>
+                <span asp-validation-for="NhanVienName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
