--- a/Super-Book-Store/Views/KhachHang/Details.cshtml
+++ b/Super-Book-Store/Views/KhachHang/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.KhachHangID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.KhachHangID)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.KhachHangName)
         </dt>
         <dd class = "col-sm-10">
