--- a/Super-Book-Store/Views/KhachHang/Edit.cshtml
+++ b/Super-Book-Store/Views/KhachHang/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="KhachHangID" />
             <div class="form-group">
+                <label asp-for="KhachHangID" class="control-label"></label>
+                <input asp-for="KhachHangID" class="form-control" />
+                <span asp-validation-for="KhachHangID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
                 <input asp-for="KhachHangName" class="form-control" />
                 <span asp-validation-for="KhachHangName" class="text-danger"></span>
