--- a/Super-Book-Store/Views/Kho/Delete.cshtml
+++ b/Super-Book-Store/Views/Kho/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BookID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BookID)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BookName)
         </dt>
         <dd class = "col-sm-10">
