--- a/Super-Book-Store/Views/Kho/Details.cshtml
+++ b/Super-Book-Store/Views/Kho/Details.cshtml
@@ -10,6 +10,12 @@
     <h4>Kho</h4>
     <hr />
     <dl class="row">
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BookID)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BookID)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BookName)
         </dt>
