--- a/Super-Book-Store/Views/NhanVien/Create.cshtml
+++ b/Super-Book-Store/Views/NhanVien/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NhanVienID" class="control-label"></label>
-                <input asp-for="NhanVienID" class="form-control" />
+                <input asp-for="NhanVienID" class="form-control" value="@ViewBag.NhanVienID" readonly/>
                 <span asp-validation-for="NhanVienID" class="text-danger"></span>
             </div>
             <div class="form-group">
