--- a/Super-Book-Store/Views/Kho/Create.cshtml
+++ b/Super-Book-Store/Views/Kho/Create.cshtml
@@ -18,14 +18,18 @@
                 <span asp-validation-for="BookID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BookName" class="control-label"></label>
-                <input asp-for="BookName" class="form-control" />
-                <span asp-validation-for="BookName" class="text-danger"></span>
+                <label asp-for="TypeBook" class="control-label"></label>
+                <input asp-for="TypeBook" class="form-control" />
+                <span asp-validation-for="TypeBook" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NumberbBook" class="control-label"></label>
                 <input asp-for="NumberbBook" class="form-control" />
                 <span asp-validation-for="NumberbBook" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LanguageID" class="control-label"></label>
+                <select asp-for="LanguageID" class ="form-control" asp-items="ViewBag.LanguageID"></select>
             </div>
             <div class="form-group">
                 <label asp-for="BookStoreExists" class="control-label"></label>
