--- a/Super-Book-Store/Views/KhachHang/Index.cshtml
+++ b/Super-Book-Store/Views/KhachHang/Index.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.Sex)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Kho.BookName)
+                @Html.DisplayFor(modelItem => item.Kho.BookID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Language.LanguageID)
