--- a/Super-Book-Store/Views/Kho/Index.cshtml
+++ b/Super-Book-Store/Views/Kho/Index.cshtml
@@ -16,10 +16,13 @@
                 @Html.DisplayNameFor(model => model.BookID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.BookName)
+                @Html.DisplayNameFor(model => model.TypeBook)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NumberbBook)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Language)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BookStoreExists)
@@ -40,10 +43,13 @@
                 @Html.DisplayFor(modelItem => item.BookID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BookName)
+                @Html.DisplayFor(modelItem => item.TypeBook)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NumberbBook)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Language.LanguageID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BookStoreExists)
