--- a/Super-Book-Store/Views/Shared/_Layout.cshtml
+++ b/Super-Book-Store/Views/Shared/_Layout.cshtml
@@ -12,19 +12,13 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Super_Book_Store</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b>Super Book Store</b></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="KhachHang" asp-action="Index">Khách Hàng</a>
                         </li>
@@ -33,7 +27,7 @@
                             <a class="nav-link text-dark items" asp-area="" asp-controller="Kho" asp-action="Upload">UpLoad</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="HoaDon" asp-action="Index">Hóa Đơn</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DonHang" asp-action="Index">Đơn Hàng</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="BookType" asp-action="Index">Loại Sách</a>
