--- a/Super-Book-Store/Views/BookType/Create.cshtml
+++ b/Super-Book-Store/Views/BookType/Create.cshtml
@@ -18,11 +18,11 @@
                 <span asp-validation-for="BookID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BookNameID" class="control-label">BookType</label>
-                <select asp-for="BookNameID" class ="form-control" asp-items="ViewBag.BookNameID"></select>
+                <label asp-for="TypeBook" class="control-label"></label>
+                <select asp-for="TypeBook" class ="form-control" asp-items="ViewBag.TypeBook"></select>
             </div>
             <div class="form-group">
-                <label asp-for="BookTypeNew" class="control-label">BookName</label>
+                <label asp-for="BookTypeNew" class="control-label"></label>
                 <input asp-for="BookTypeNew" class="form-control" />
                 <span asp-validation-for="BookTypeNew" class="text-danger"></span>
             </div>
