--- a/Super-Book-Store/Views/BookType/Edit.cshtml
+++ b/Super-Book-Store/Views/BookType/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BookID" />
             <div class="form-group">
-                <label asp-for="BookNameID" class="control-label"></label>
-                <select asp-for="BookNameID" class="form-control" asp-items="ViewBag.BookNameID"></select>
-                <span asp-validation-for="BookNameID" class="text-danger"></span>
+                <label asp-for="TypeBook" class="control-label"></label>
+                <select asp-for="TypeBook" class="form-control" asp-items="ViewBag.TypeBook"></select>
+                <span asp-validation-for="TypeBook" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="BookTypeNew" class="control-label"></label>
