--- a/Super-Book-Store/Views/DonHang/Create.cshtml
+++ b/Super-Book-Store/Views/DonHang/Create.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.HoaDon
+@model Super_Book_Store.Models.DonHang
 
 @{
     ViewData["Title"] = "Create";
@@ -6,16 +6,16 @@
 
 <h1>Create</h1>
 
-<h4>HoaDon</h4>
+<h4>DonHang</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="HoaDonID" class="control-label"></label>
-                <input asp-for="HoaDonID" class="form-control" value="@ViewBag.HoaDonID" readonly/>
-                <span asp-validation-for="HoaDonID" class="text-danger"></span>
+                <label asp-for="DonHangID" class="control-label"></label>
+                <input asp-for="DonHangID" class="form-control" value="@ViewBag.DonHangID" readonly/>
+                <span asp-validation-for="DonHangID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
