--- a/Super-Book-Store/Views/DonHang/Delete.cshtml
+++ b/Super-Book-Store/Views/DonHang/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.HoaDon
+@model Super_Book_Store.Models.DonHang
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,15 +8,9 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>HoaDon</h4>
+    <h4>DonHang</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.HoaDonID)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.HoaDonID)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.KhachHang)
         </dt>
@@ -50,7 +44,7 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="HoaDonID" />
+        <input type="hidden" asp-for="DonHangID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
