--- a/Super-Book-Store/Views/DonHang/Edit.cshtml
+++ b/Super-Book-Store/Views/DonHang/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Super_Book_Store.Models.HoaDon
+@model Super_Book_Store.Models.DonHang
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,13 +6,13 @@
 
 <h1>Edit</h1>
 
-<h4>HoaDon</h4>
+<h4>DonHang</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="HoaDonID" />
+            <input type="hidden" asp-for="DonHangID" />
             <div class="form-group">
                 <label asp-for="KhachHangName" class="control-label"></label>
                 <select asp-for="KhachHangName" class="form-control" asp-items="ViewBag.KhachHangName"></select>
