--- a/Super-Book-Store/Views/DonHang/Index.cshtml
+++ b/Super-Book-Store/Views/DonHang/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Super_Book_Store.Models.HoaDon>
+@model IEnumerable<Super_Book_Store.Models.DonHang>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,9 +12,6 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.HoaDonID)
-            </th>
             <th>
                 @Html.DisplayNameFor(model => model.KhachHang)
             </th>
@@ -52,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.HoaDonID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.HoaDonID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.HoaDonID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.DonHangID">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.DonHangID">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.DonHangID">Delete</a>
             </td>
         </tr>
 }
