--- a/Super-Book-Store/Views/Home/Index.cshtml
+++ b/Super-Book-Store/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
+﻿﻿@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Chào Mừng bạn đến với <b>Super Book Store</b></h1>
+    <p>Được Làm bởi <a href="https://docs.microsoft.com/aspnet/core">NHÓM 4</a>.</p>
 </div>
