--- a/Super-Book-Store/Views/Kho/Delete.cshtml
+++ b/Super-Book-Store/Views/Kho/Delete.cshtml
@@ -12,22 +12,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BookID)
+            @Html.DisplayNameFor(model => model.TypeBook)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BookID)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BookName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BookName)
+            @Html.DisplayFor(model => model.TypeBook)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.NumberbBook)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NumberbBook)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Language)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Language.LanguageID)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.BookStoreExists)
